--- a/grid.html
+++ b/grid.html
@@ -6,12 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="program.css">
 </head>
-<body>
-<div class="container">
-   <header></header>
-   <article: class="right"></article:>
-   <article: class="left"></article:>
-   <footer></footer>
-</div>    
+<style>
+    p {
+      border: 5px;
+      margin: 50px;
+    }
+    </style>
+    </head>
+    <body>
+    
+    <h1>Boxning</h1>
+    
+    <p1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia est culpa veritatis recusandae aperiam eos quam voluptatibus maxime blanditiis aut reprehenderit nemo molestias, modi laudantium illo nulla quis? Assumenda, porro!</p1>
+    <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, debitis id. Eaque mollitia distinctio eius eos fuga obcaecati, consequuntur aperiam!</p2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad, eaque!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, necessitatibus!</p>
+        <img src="muhammad ali..webp">
+<body>  
 </body>
 </html>
